# sp-istio-wasm

./: .gitignore  CLAUDE.md  Cargo.toml  DESING.md  Dockerfile  Makefile  README.md  a.txt  build  build-and-push.sh  build.rs  build.sh  deploy-and-restart.sh  deploy.sh  test-cache-scenario.sh  test-docker.sh  test-injection-scenario.sh  test.sh  test_endpoints.rs  test_trace_context.sh
.github/workflows/: release.yml  (+1 more)
config/: development.yaml
deploy/: README.md  auto-instrumentation.yaml  demo-apps-deployment.yaml  demo-istio-gateway.yaml  minimal.yaml  minimal.yaml.bak  otel-auto-instrumentation.yaml  sp-istio-agent-minimal.yaml  sp-istio-agent.yaml  test-bookinfo.yaml
docs/: deployment.md  development.md  quickstart.md  use-cases.md
istio-configs/: envoyfilter.yaml  wasmplugin.yaml
k8s/: cluster-setup-without-otel.sh  cluster-setup.sh  default-telemetry-config.yaml  demo-airline-deployment.yaml  demo-ota-deployment.yaml  deploy-apps.sh  readme.md  sp-istio-agent-minimal copy.yaml  sp-istio-agent-minimal.yaml  start-port-forward.sh
scripts/: cleanup.sh  cluster-setup.sh  deploy-demo-apps.sh  deploy.sh  health-check.sh  install-wasm-plugin.sh  integration-test.sh  logs.sh  rebuild-and-restart.sh  restart-demo-app.sh  start-port-forwarding.sh  version.sh
src/: cache.rs  config.rs  context.rs  headers.rs  http_client.rs  http_helpers.rs  injection.rs  lib.rs  logging.rs  masking.rs  otel.rs  trace_context.rs  traffic.rs
test/: Dockerfile  docker-compose.yml  docker-envoy.yaml  envoy.yaml  envoy2.yaml  go.mod  main.go  otel-collector-config.yaml  test.go
(+43 files in other folders)
