[package]
name = "sp-istio-agent"
version = "0.1.14"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
non-wasm = []

[[bin]]
name = "test_endpoints"
path = "test_endpoints.rs"
required-features = ["non-wasm"]

[dependencies]
proxy-wasm = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
prost = "0.12"
log = "0.4"
url = "2.5"
regex = "1.5"

[build-dependencies]
prost-build = "0.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "1.4", features = ["full"] }
tonic = { version = "0.12", features = ["prost"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
mockall = "0.12"
tempfile = "3.10"
assert_matches = "1.5"
futures = "0.3"